[package]
authors = ["Andy Georges <itkovian@gmail.com>"]
edition = "2018"
name = "raccountpage"
version = "0.1.0"

[dependencies]
chrono = "0.4.11"
fern = { version="0.6.0", features=["reopen-03"] }
restson = "0.6.0"
dotenv = "0.15.0"
serde = "1.0.106"
serde_derive = "1.0.106"
hyper = "0.13.5"
hyper-tls = "0.4.1"
clap = "2.33.0"
log = "0.4.8"
serde_json = "1.0.52"

